crates/templates/tests/snapshots/usage_test__impl-10.snap
---
source: crates/templates/tests/usage_test.rs
expression: output
---
usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  usage [OPTIONS]\n"
  printf "  usage -h|--help\n"
  printf "  usage -v|--version\n"
  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -cm --choices [<CHOICES>]\n"
  printf "    Test option with choices and multiple\n"
  printf "    [@multiple, @choices foo, bar, baz]\n"
  printf "\n\033[4m%s\033[0m\n" "Flags:"
  printf "  -s --short\n"
  printf "    Test short flag\n"
  printf "  --verbose\n"
  printf "    Test verbose flag\n"
  printf "  -h --help\n"
  printf "    Print help\n"
  printf "  -v --version\n"
  printf "    Pring version\n"
}

