crates/templates/tests/snapshots/usage_test__impl-15.snap
---
source: crates/templates/tests/usage_test.rs
description: Usage with extra help message
expression: output
---
usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  foo -r|--required <REQUIRED> [OPTIONS]\n"

  printf "  foo -h|--help\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -r --required <REQUIRED>\n"
  printf "    Test required option\n"
  printf "  -h --help\n"
  printf "    Print help\n"
}

